--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!--<link rel="icon" href="" />-->
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
-    <!--<link rel="apple-touch-icon" href="" />-->
+    <link rel="apple-touch-icon" href="" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
 
       REMEMBER TO REPLACE SRC ICONS IN manifest.json!!
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Math Riddles Online</title>
   </head>
   <body>
