--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A game of challenging math riddles"/>
+    <meta name="google-site-verification" content="uY9oWzXrWc5ZUfLQqxrIE7jSW7NpLPJB5WN7u4dIRd4" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="apple-touch-icon" href="mro_logo.jpg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-
-      REMEMBER TO REPLACE SRC ICONS IN manifest.json!!
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Math Riddles Online</title>
   </head>
