--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <link rel="apple-touch-icon" href="mro_logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Math Riddles Online</title>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-171563204-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <noscript>You must enable JavaScript to run this app.</noscript>
