--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       </script>
   </head>
   <body>
-    <noscript>You must enable JavaScript to run this app.</noscript>
+    <noscript>Unfortunately, you need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
     </script>
