--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" href="mro_logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Math Riddles Online</title>
+    <!--[if lte IE 9]>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,7 +20,17 @@
       
       ga('create', 'UA-171563204-1', 'auto');
       ga('send', 'pageview');
-      </script>
+    </script>
+    <![endif]-->
+    
+    <!--[if !IE] -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!--[endif]-->
   </head>
   <body>
     <noscript>Unfortunately, you need to enable JavaScript to run this app.</noscript>
